@@ -11,8 +11,8 @@ android {
         applicationId "com.tycho.app.primenumberfinder"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 19
-        versionName "1.3.4.DEV"
+        versionCode 20
+        versionName "1.3.4"
     }
     buildTypes {
         release {
