@@ -179,7 +179,7 @@
                         android:gravity="center_horizontal"
                         android:imeOptions="actionDone"
                         android:includeFontPadding="false"
-                        android:inputType="numberDecimal"
+                        android:inputType="number"
                         android:textSize="14sp" />
 
                     <TextView
@@ -372,7 +372,7 @@
                         android:gravity="center_horizontal"
                         android:imeOptions="actionDone"
                         android:includeFontPadding="false"
-                        android:inputType="numberDecimal"
+                        android:inputType="number"
                         android:textSize="14sp" />
 
                     <TextView
