@@ -103,7 +103,9 @@
 04/28/2018 > Prime Number Finder version 1.3.3
 - Fixed a bug that sometimes caused the app to crash after inputting numbers while "infinity" was displayed in the text box.
 
-05/??/2018 > Prime Number Finder version 1.3.4
-- Minor UI improvements
+05/08/2018 > Prime Number Finder version 1.3.4
+- UI improvements
 - Improved support for other locales
+- Stability improvements
+- Minor performance improvements
 - Bug fixes
